# invoice

./: Cargo.toml  README.md  metadata.json
implementation-docs/: IMPLEMENTATION_PLAN.md  instructions.txt  prompt-to-generate-implementation-plan.md  prompt-to-implement-from-plan.md
invoice/: Cargo.toml  expand.txt
invoice/src/: icon  lib.rs
pkg/: manifest.json
resources/example-apps/file-explorer/api/: file-explorer.wit
resources/example-apps/file-explorer/pkg/: explorer.wasm
resources/example-apps/id/api/: id-sys-v0.wit  id.wit  types-id-sys-v0.wit
resources/example-apps/sign/api/: sign-sys-v0.wit  sign.wit  types-sign-sys-v0.wit
resources/guides/: 00-QUICK-REFERENCE.md  01-COMMON-PATTERNS.md  02-TROUBLESHOOTING.md  03-WIT-TYPES-DATA-MODELING.md  04-P2P-PATTERNS.md  05-UI-FRONTEND-GUIDE.md  06-TESTING-DEBUGGING.md  07-COMPLETE-EXAMPLES.md  08-MANIFEST-AND-DEPLOYMENT.md  09-CAPABILITIES-GUIDE.md  10-MANIFEST-CONFIGURATION.md  README.md
ui/: index.html  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
ui/src/: App.css  App.tsx  index.css
ui/src/components/Invoice/: InvoiceEditor.css  InvoiceEditor.tsx  InvoiceHeader.css  InvoiceHeader.tsx  InvoiceTotals.css  InvoiceTotals.tsx  LineItemTable.css  LineItemTable.tsx  PDFViewer.tsx
ui/src/components/InvoiceList/: InvoiceList.css  InvoiceList.tsx
ui/src/components/Settings/: SettingsPage.css  SettingsPage.tsx
ui/src/hooks/: useDebounce.ts
ui/src/store/: invoice.ts  skeleton.ts
ui/src/types/: invoice.ts  skeleton.ts
ui/src/utils/: api.ts  invoiceApi.ts
(+3 files in other folders)
