[dependencies]
anyhow = "1.0"
base64 = "0.22"
base64ct = "=1.6.0"
process_macros = "0.1"
serde_json = "1.0"
wit-bindgen = "0.36.0"

[dependencies.caller-utils]
path = "../target/caller-utils"

[dependencies.hyperprocess_macro]
git = "https://github.com/hyperware-ai/hyperprocess-macro"
rev = "f1cd5bb"

[dependencies.hyperware_app_common]
git = "https://github.com/hyperware-ai/hyperprocess-macro"
rev = "f1cd5bb"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[features]
simulation-mode = []

[lib]
crate-type = ["cdylib"]

[package]
edition = "2021"
name = "invoice"
version = "0.1.0"

[package.metadata.component]
package = "hyperware:process"
