[dependencies]
anyhow = "1.0"
base64 = "0.22"
base64ct = "=1.6.0"
process_macros = "0.1"
serde_json = "1.0"
wit-bindgen = "0.36.0"

[dependencies.hyperprocess_macro]
git = "https://github.com/hyperware-ai/hyperprocess-macro"
rev = "c6f0d35"

[dependencies.hyperware_process_lib]
features = ["hyperapp"]
git = "https://github.com/hyperware-ai/process_lib"
rev = "c27a881"

[dependencies.invoice_caller_utils]
optional = true
path = "../target/invoice-caller-utils"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[features]
caller-utils = ["invoice_caller_utils"]
simulation-mode = []

[lib]
crate-type = ["cdylib"]

[package]
edition = "2021"
name = "invoice"
version = "0.1.0"

[package.metadata.component]
package = "hyperware:process"
